# biomimetic-ai-orchestration

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REPRODUCE.md  STATUS.md  claude.md  pyproject.toml
archive/: README.md  STATUS.md  paper2.md
docs/: acp_integration.md  architecture.md  build_report.py  glossary.md  harness_integration_plan.md  index.html  live_pilot.md  measures.md  next_experiments.md  paper.md  paper2_plan.md  phase3_runbook.md  product.md  publication_plan.md  research.html  roadmap.md  strategy.md  theory.md  tropos_tour.html
examples/: __init__.py  quickstart.py  walkthrough.py  wrapper_demo.py
paper/: README.md  REVISIONS.md  build.sh  main.bbl  main.tex  main_formal.tex  refs.bib
paper1/: .gitignore  README.md  REVISIONS.md  main.bbl  main.tex  main_formal.tex  refs.bib
paper2/: README.md  build.sh  main.tex  refs.bib
pilot_tasks/: analyse.py  expert_suite.py  headtohead.py  held_out.py  held_out_suite.py  ladder.py  ood.py  ood_suite.py  project.py  project_suite.py  score_submissions.py  suite.py  vignette.py
results/: RESULTS.md  dashboard.html  showcase.html  summary.json
tests/: test_ablation.py  test_acp.py  test_analysis.py  test_autoresearch.py  test_autorun.py  test_cli_reproduce.py  test_concurrent.py  test_cost.py  test_dataset.py  test_expert_suite.py  test_fitted_recovery.py  test_foundation.py  test_headtohead.py  test_headtohead_replay.py  test_held_out_suite.py  test_hypotheses.py  test_ladder.py  test_latency_weight.py  test_learning_curve.py  test_live_pilot.py  test_ood_suite.py  test_pareto.py  test_pilot.py  test_poc.py  test_project.py  test_realism.py  test_routing.py  test_routing_experiment.py  test_sandbagging.py  test_scoring.py  test_sim.py  test_store_atomic.py  test_strategic_adversary.py  test_streaming.py  test_temporal.py  test_vignette.py  (+1 more)
(+170 files in other folders)
