# Project manifest for biomimetic-ai-orchestration.
# Language decision (Python 3.11+) is confirmed and recorded in claude.md section 7.

[project]
name = "biomimetic-ai-orchestration"
version = "0.0.1"
description = "Decentralised, signal-driven multi-agent orchestration inspired by cryptic female choice."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "The biomimetic-ai-orchestration authors" }]
license = "Apache-2.0"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# A conservative starting set: pycodestyle, pyflakes, isort, bugbear, pyupgrade.
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
